# PRV

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  prv-diagram.html
.beads/: deletions.jsonl  issues.jsonl
.claude/skills/decompose/: SKILL.md
.prv/: index.json
PLAN/: 00_north_star.md  01_requirements.md  02_requirements_qa.md  03_decisions.md  04_risks_and_spikes.md  05_traceability.md  06_phases.md
PLAN/support/: SPIKE-002-fingerprinting-analysis.md  SPIKE-002-first-principles.md  corpus-methodology.md  corpus-v1.jsonl  scoring-rubric.md  validation-v1.md
crates/prv/: Cargo.toml
crates/prv-cass/: Cargo.toml
crates/prv-cass/src/: db.rs  lib.rs  models.rs  workspace.rs
crates/prv-core/: Cargo.toml
crates/prv-core/src/: code_block.rs  lib.rs  link.rs  link_index.rs  link_storage.rs
crates/prv-core/src/matcher/: gates.rs  mod.rs  step0.rs  step1.rs  step2.rs
crates/prv/src/: main.rs
docs/: prv-artifact.html
sessions/calibrate-20251228-203237/: 01_coverage_report.md  02_drift_report.md  03_challenge_report.md  04_synthesis_report.md  05_user_report.md
sessions/calibrate-phase0-20251228/: 01_coverage_report.md  02_drift_report.md  03_challenge_report.md  04_synthesis_report.md  05_user_report.md
sessions/decompose-phase0-20241227/: 01_understanding.md  02_manifest.md  03_beads_created.md
sessions/decompose-phase1-20251228/: 01_phase1_decomposition.md
