[package]
name = "prv-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and utilities for PRV"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
