[package]
name = "prv"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context tracing for code - trace any line back to its origin"

[[bin]]
name = "prv"
path = "src/main.rs"

[dependencies]
prv-core = { path = "../prv-core" }
prv-cass = { path = "../prv-cass" }
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
git2 = "0.19"
regex = "1"
serde_json = "1"
